--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: ['**']
+    branches: ['main', 'test']
   pull_request:
-    branches: ['**']
+    branches: ['main']
 
 jobs:
   lint:
